--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 
   </head>
   <body>
-  Test
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>  
+<script src="http://d23cj0cdvyoxg0.cloudfront.net/xivelyjs-1.0.4.min.js"></script>  
+// Set the Xively API key  
+xively.setKey( "pDjVCMKAqyngn21wBPziUAo0QJpPReVi20XkkDMrbJrX8vRe" ); 
 
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
