--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
+    <script src="javascripts/respond.js">
+      // Set the Xively API key  
+xively.setKey( "pDjVCMKAqyngn21wBPziUAo0QJpPReVi20XkkDMrbJrX8vRe" ); 
+    </script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -18,10 +21,8 @@
 
   </head>
   <body>
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>  
-<script src="http://d23cj0cdvyoxg0.cloudfront.net/xivelyjs-1.0.4.min.js"></script>  
-// Set the Xively API key  
-xively.setKey( "pDjVCMKAqyngn21wBPziUAo0QJpPReVi20XkkDMrbJrX8vRe" ); 
+
+
 
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
