--- a/index.html
+++ b/index.html
@@ -9,7 +9,45 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js">
       // Set the Xively API key  
+
+// Make sure the document is ready to be handled  
+$(document).ready(function($) {  
+  
+  // Set the Xively API key (https://xively.com/users/YOUR_USERNAME/keys)  
 xively.setKey( "pDjVCMKAqyngn21wBPziUAo0QJpPReVi20XkkDMrbJrX8vRe" ); 
+  
+  // Replace with your own values  
+  var feedID        = 1949090795,          // Feed ID  
+      datastreamID  = "Air_out";       // Datastream ID  
+      selector      = "#myelement";   // Your element on the page  
+  
+  // Get datastream data from Xively  
+  xively.datastream.get (feedID, datastreamID, function ( datastream ) {  
+    // WARNING: This code is only executed when we get a response back from Xively,   
+    // it will likely execute after the rest your script  
+    //  
+    // NOTE: The variable "datastream" will contain all the Datastream information   
+    // as an object. The structure of Datastream objects can be found at:   
+    // https://xively.com/dev/docs/api/quick_reference/api_resource_attributes/#datastream  
+  
+    // Display the current value from the datastream  
+    $(selector).html( datastream["current_value"] );  
+  
+    // Getting realtime!   
+    // The function associated with the subscribe method will be executed   
+    // every time there is an update to the datastream  
+    xively.datastream.subscribe( feedID, datastreamID, function ( event , datastream_updated ) {  
+      // Display the current value from the updated datastream  
+      $(selector).html( datastream_updated["current_value"] );  
+    });  
+  
+  });  
+  
+  // WARNING: Code here will continue executing while we get the datastream data from Xively,   
+  // use the function associated with datastream.get to work with the data   
+  // once the request is complete  
+});  
+
     </script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
