--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@ xively.setKey( "pDjVCMKAqyngn21wBPziUAo0QJpPReVi20XkkDMrbJrX8vRe" );
 
   </head>
   <body>
-
+Air out temperatue
+#myelement
 
 
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
