--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ xively.setKey( "pDjVCMKAqyngn21wBPziUAo0QJpPReVi20XkkDMrbJrX8vRe" );
   
   // Replace with your own values  
   var feedID        = 1949090795,          // Feed ID  
-      datastreamID  = "Air_out";       // Datastream ID  
+      datastreamID  = "Air_out_temperature";       // Datastream ID  
       selector      = "#myelement";   // Your element on the page  
   
   // Get datastream data from Xively  
