--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ xively.setKey( "pDjVCMKAqyngn21wBPziUAo0QJpPReVi20XkkDMrbJrX8vRe" );
   </head>
   <body>
 Air out temperatue
-#myelement
+<span id="myelement"></span>
 
 
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
