--- a/index.html
+++ b/index.html
@@ -19,49 +19,51 @@
 
   </head>
   <body>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js">
-      // Set the Xively API key  
+   <h1>XivelyJS Tutorial</h1>
 
-// Make sure the document is ready to be handled  
-$(document).ready(function($) {  
-  
-  // Set the Xively API key (https://xively.com/users/YOUR_USERNAME/keys)  
-xively.setKey( "pDjVCMKAqyngn21wBPziUAo0QJpPReVi20XkkDMrbJrX8vRe" ); 
-  
-  // Replace with your own values  
-  var feedID        = 1949090795,          // Feed ID  
-      datastreamID  = "Air_out_temperature";       // Datastream ID  
-      selector      = "#myelement";   // Your element on the page  
-  
-  // Get datastream data from Xively  
-  xively.datastream.get (feedID, datastreamID, function ( datastream ) {  
-    // WARNING: This code is only executed when we get a response back from Xively,   
-    // it will likely execute after the rest your script  
-    //  
-    // NOTE: The variable "datastream" will contain all the Datastream information   
-    // as an object. The structure of Datastream objects can be found at:   
-    // https://xively.com/dev/docs/api/quick_reference/api_resource_attributes/#datastream  
-  
-    // Display the current value from the datastream  
-    $(selector).html( datastream["current_value"] );  
-  
-    // Getting realtime!   
-    // The function associated with the subscribe method will be executed   
-    // every time there is an update to the datastream  
-    xively.datastream.subscribe( feedID, datastreamID, function ( event , datastream_updated ) {  
-      // Display the current value from the updated datastream  
-      $(selector).html( datastream_updated["current_value"] );  
-    });  
-  
-  });  
-  
-  // WARNING: Code here will continue executing while we get the datastream data from Xively,   
-  // use the function associated with datastream.get to work with the data   
-  // once the request is complete  
-});  
-Air out temperatue
-<span id="myelement"></span>
+  <h2><small>Live datastream value</small> <span id="myelement"></span></h2>
+
+  <small><a href="/xively-js/tutorial/">&larr; Back to Tutorial</a></small>
+
+  <!-- Include jQuery -->
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+  <!-- Include XivelyJS -->
+  <script src="http://d23cj0cdvyoxg0.cloudfront.net/xivelyjs-1.0.4.min.js"></script>
+  <!-- Our Script (should be included in a separate file, only inline for demo purposes) -->
+  <script>
+
+    // Make sure the document is ready to be handled
+    $(document).ready(function($) {
+
+      // Set the Xively API key (https://xively.com/users/YOUR_USERNAME/keys)
+      xively.setKey( "pDjVCMKAqyngn21wBPziUAo0QJpPReVi20XkkDMrbJrX8vRe" );
+
+      // Replace with your own values
+      var feedID        = 1949090795,          // Feed ID (the last number on the URL on the feed page on Xively)
+          datastreamID  = "Air_out_temperature";       // Datastream ID
+          selector      = "#myelement";   // Your element on the page - takes any valid jQuery selector
+
+      // Get datastream data from Xively
+      xively.datastream.get (feedID, datastreamID, function ( datastream ) {
+        // WARNING: This code is only executed when we get a response back from Xively, it will likely execute after the rest your script
+        // NOTE: The variable "datastream" will contain all the Datastream information as an object. The structure of Datastream objects can be found at: 
+        // https://xively.com/dev/docs/api/quick_reference/api_resource_attributes/#datastream
+
+
+        // Display the current value from the datastream
+        $(selector).html( datastream["current_value"] );
+
+        // Getting realtime! The function associated with the subscribe method will be executed every time there is an update to the datastream
+        xively.datastream.subscribe( feedID, datastreamID, function ( event , datastream_updated ) {
+          // Display the current value from the updated datastream
+          $(selector).html( datastream_updated["current_value"] );
+        });
+
+      });
+
+      // WARNING: Code here will continue executing while we get the datastream data from Xively, use the function associated with datastream.get to work with the data, when the request is complete
+    });
+  </script>
 
 
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
