--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
    <h1>XivelyJS Tutorial</h1>
 
-  <h2><small>Live datastream value</small> <span id="myelement"></span></h2>
+  <h2><small>Air out temperature</small> <span id="myelement"></span></h2>
 
   <small><a href="/xively-js/tutorial/">&larr; Back to Tutorial</a></small>
 
