--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
   </head>
   <body>
-   <h1>XivelyJS Tutorial</h1>
+   <h1>Live Temperature data</h1>
 
   <h2><small>Air out temperature</small> <span id="myelement"></span></h2>
 
-  <small><a href="/xively-js/tutorial/">&larr; Back to Tutorial</a></small>
+  //<small><a href="/xively-js/tutorial/">&larr; Back to Tutorial</a></small>
 
   <!-- Include jQuery -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
