--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
       // Replace with your own values
       var feedID        = 1949090795,          // Feed ID (the last number on the URL on the feed page on Xively)
           datastreamID  = "Air_out_temperature";       // Datastream ID
+          datastreamID2 = "Ambient_temperature";
+          datastreamID3 = "Gas_1_temperature";
+          datastreamID4 = "Gas_2_temperature";
+          
           selector      = "#myelement";   // Your element on the page - takes any valid jQuery selector
 
       // Get datastream data from Xively
-      xively.datastream.get (feedID, datastreamID, function ( datastream ) {
+      xively.datastream.get (feedID, datastreamID, datastreamID2,datastreamID3,datastreamID4,function ( datastream ) {
         // WARNING: This code is only executed when we get a response back from Xively, it will likely execute after the rest your script
         // NOTE: The variable "datastream" will contain all the Datastream information as an object. The structure of Datastream objects can be found at: 
         // https://xively.com/dev/docs/api/quick_reference/api_resource_attributes/#datastream
