--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <body>
    <h1>Live Temperature data</h1>
 
-  <h2><small>Air out temperature</small> <span id="myelement"></span></h2>
+  <h2><small>Air out temperature</small> <span id="#myelement"></span></h2>
 
-  //<small><a href="/xively-js/tutorial/">&larr; Back to Tutorial</a></small>
+  
 
   <!-- Include jQuery -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
