--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
 
   </head>
   <body>
-   <h1>Live Temperature data</h1>
+   
+    <h1>XivelyJS Tutorial</h1>
 
-  <h2><small>Air out temperature</small> <span id="myelement"></span></h2>
+  <h2><small>Live datastream value</small> <span id="myelement"></span></h2>
 
-  
+  <small><a href="/xively-js/tutorial/">&larr; Back to Tutorial</a></small>
 
   <!-- Include jQuery -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -40,7 +41,7 @@
 
       // Replace with your own values
       var feedID        = 1949090795,          // Feed ID (the last number on the URL on the feed page on Xively)
-            datastreamID  = "Air_out_temperature";       // Datastream ID
+          datastreamID  = "Air_out_temperature";       // Datastream ID
           selector      = "#myelement";   // Your element on the page - takes any valid jQuery selector
 
       // Get datastream data from Xively
@@ -63,9 +64,8 @@
 
       // WARNING: Code here will continue executing while we get the datastream data from Xively, use the function associated with datastream.get to work with the data, when the request is complete
     });
-    
 
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
+   </script> 
   </body>
 </html>
