--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       var feedID        = 1949090795,          // Feed ID (the last number on the URL on the feed page on Xively)
           datastreamID  = "Air_out_temperature";       // Datastream ID
           datastreamID1 = "Ambient_temperature";
-          selector      = "#myelement";   // Your element on the page - takes any valid jQuery selector
+          selector      = "";   // Your element on the page - takes any valid jQuery selector
 
       // Get datastream data from Xively
       xively.datastream.get (feedID, datastreamID, function ( datastream ) {
